--- a/.github/workflows/flow-publish-github-pages.yaml
+++ b/.github/workflows/flow-publish-github-pages.yaml
@@ -22,7 +22,12 @@ jobs:
       - name: Install Security Agent
         uses: step-security/harden-runner@dd2c410b088af7c0dc8046f3ac9a8f4148492a95
         with:
-          egress-policy: audit
+          egress-policy: block
+          allowed-endpoints: >
+            api.github.com:443
+            github.com:443
+            objects.githubusercontent.com:443
+            pipelines.actions.githubusercontent.com:443
 
       - name: Checkout Code
         uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b
