Harden deployment job
Signed-off-by: Nathan Klick <nathan@jcovalent.com>

--- a/.github/workflows/flow-publish-github-pages.yaml
+++ b/.github/workflows/flow-publish-github-pages.yaml
@@ -70,8 +70,11 @@ jobs:
       - name: Install Security Agent
         uses: step-security/harden-runner@dd2c410b088af7c0dc8046f3ac9a8f4148492a95
         with:
-          egress-policy: audit
-          
+          egress-policy: block
+          allowed-endpoints: >
+            api.github.com:443
+            pipelines.actions.githubusercontent.com:443
+
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@44d42469122ee9e44e202f0a0fab6f266fb3f139
